src/objects/Price__c.object
<CustomObject>
    <fields>
        <fullName>Added_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Added date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Product name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Release_date__c</fullName>
        <label>Release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>in_stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In stock</label>
        <type>Checkbox</type>
    </fields>
    <label>Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>check_Release_date</fullName>
        <active>true</active>
        <errorConditionFormula>Release_date__c&gt;TODAY()</errorConditionFormula>
        <errorMessage>Error! Release date should be later than today...</errorMessage>
    </validationRules>
</CustomObject>